--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "contactmanager",
-  "homepage": "https://animtel.github.io/ReactGrowApp",
+  "homepage": "https://animtel.github.io/ReactGrowApp/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.1.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
